--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@
 
   main {
     background-color: #2A2C2E;
-    height: 100vh;
+    height: fit-content;
   }
 
   header {
@@ -124,17 +124,21 @@
 
   .books-tile {
     display: flex;
-    flex-direction: column;
-    
-    
+    flex-direction: column;    
   }
 
   .list {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
     gap: 10px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .book-details {
