--- a/index.css
+++ b/index.css
@@ -247,7 +247,8 @@
   .book-info {
     display: flex;
     flex-direction: row;
-    max-width: 1000px;
+    justify-content: space-between;
+    max-width: 70%;
     border-radius: 20px;
     margin: auto;
     padding: 20px;
@@ -258,6 +259,12 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+  }
+
+  .book-info-right {
+    display: flex;
+    flex-direction: column;
+
   }
 
   .details {
