--- a/index.css
+++ b/index.css
@@ -209,26 +209,7 @@
     font-weight: 200;
   }
 
-  @media screen and (max-width: 768px) {
-    .footer-bot {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      gap: 10px;
-    }
-    .navbar {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      width: 100%;
-    }
-    .nav-mid {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      width: 100%;
-    }
-  }
+  
 
   .flexrow {
     display: flex;
@@ -289,11 +270,75 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;;
+    align-items: center;
     gap: 12px;
   }
 
   .reviews {
     display: flex;
     flex-direction: column;
+  }
+
+
+  @media screen and (max-width: 768px) {
+    .footer-bot {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 10px;
+    }
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .nav-mid {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .book-info {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+      gap: 10px;
+    }
+    .book-info-left {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .book-info-right {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+      margin-top: 20px;
+    }
+    .details {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .book-info-right {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .book-carousel {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+    }
+    .alsolike {
+      align-items: center;
+      text-align: center;
+    }
   }
